# bevy_spine3.8

./: Cargo.toml  readme.md  rust-toolchain.toml
assets/spineboy/export/: spineboy-ess.json  spineboy-pro.json
examples/: 3d.rs  crossfades.rs  custom_material.rs  events.rs  ik.rs  immediate_spawn.rs  simple.rs
examples/spineboy/: bullet.rs  main.rs  player.rs
src/: assets.rs  lib.rs  materials.rs  test.rs  textures.rs
