[package]
name = "bevy_spine"
version = "0.10.2"
edition = "2024"
description = "Spine plugin for Bevy utilizing rusty_spine"
homepage = "https://github.com/jabuwu/bevy_spine"
repository = "https://github.com/jabuwu/bevy_spine"
readme = "readme.md"
license-file = "LICENSE"
exclude = ["assets/*"]

[dependencies]
glam = { version = "0.29", features = ["mint"] }
thiserror = "2"

[dependencies.bevy]
version = "0.16"
default-features = false
features = ["bevy_render", "bevy_asset", "bevy_sprite"]

[dependencies.rusty_spine]
git = "https://github.com/supdrewin/rusty_spine"
branch = "3.7"

[dev-dependencies]
lerp = "0.5"
bevy = { version = "0.16", default-features = true }

[workspace]
members = ["ci"]
